--- a/public/style.css
+++ b/public/style.css
@@ -987,8 +987,10 @@ h2 {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    clip-path: polygon(30% 0, 100% 0, 100% 68%, 96% 100%, 18% 100%, 8% 100%, 0 100%, 5% 41%, 26% 41%);
+    clip-path: polygon(30% 0, 100% 0, 100% 68%, 96% 100%, 18% 100%, 8% 100%, 0 100%, 6% 41%, 26% 41%);
     position: relative;
+    width: 1000px;
+    height: 120px;
 }
 
 .nameDetailPart4,
@@ -1001,11 +1003,11 @@ h2 {
     border: .15rem solid var(--member-see-through);
     backdrop-filter: var(--member-blur);
     top: 20vh;
-    left: 37vw;
+    left: 37.5vw;
 }
 
 .nameDetailPart5 {
-    left: 35vw;
+    left: 35.5vw;
 } 
 
 .containerImageDetail {
@@ -1211,13 +1213,13 @@ h2 {
 
 
 #memberGradient1 {
-    position: absolute;
+position: absolute;
     width: 1200vw;
     height: 130vh;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: radial-gradient(rgba(171, 42, 246, 0.1) -10%, rgba(255, 0, 0, 0) 50%);
+    background-image: radial-gradient(rgba(171, 42, 246, 0.1§) -10%, rgba(255, 0, 0, 0) 50%);
     animation: memberGradient1 2s ease-in-out infinite;
 }
 
@@ -1251,3 +1253,31 @@ h2 {
         transform: translate(-55%, -50%);        
     }
 }
+
+
+.backButton{
+    color: var(--text-color);
+    background-color: transparent;
+    font-size: 1.5rem;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    top: 20.5vh;
+    left: 30.5vw;
+    height: fit-content;
+    font-family: 'Syne Mono', monospace;
+    text-shadow: .1rem .1rem .2rem black;
+    font-weight: 100;
+}
+
+.containerBackButton{
+    position: absolute;
+    width: 6rem;
+    height: 2.5rem;
+    transform: skew(-40deg);
+    background: var(--member-see-through);
+    backdrop-filter: var(--member-blur);
+    top: -.5vh;
+    left: -1vw;
+}
+
